--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,31 +16,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-
     <nav class = "navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Rails I </font> </font> </a>
+      <a class="navbar-brand" href="#"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> rails </font> </font> </a>
       <button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "# navbarColor02" aria-controls = "navbarColor02" aria-expand = "false" aria-label = "Toggle navigation ">
         <span class = "navbar-toggler-icon"> </span>
       </button>
 
-      <div class = "collapse navbar-collapse" id = "navbarColor02">
-        <ul class = "navbar-nav mr-auto">
-          <li class = "elemento de navegación activo">
-              <%= link_to 'Index', todos_path %>
-          </li>
-
-          <li class = "nav-item">
-              <%= link_to 'Agregar', todos_new_path  %>"
-          </li>
-          <li class = "nav-item">
-            <%= link_to 'Lista', todos_list_path  %>"
-          </li>
-
-        </ul>
+      <div class = "navbar navbar-inverse navbar-fixed-top" id = "navbarColor02">
+          <ul class = "navbar-nav mr-auto">
+              <li>
+                <%= link_to 'Index', todos_path, :class => 'navbar-text' %>
+              </li>
+              <li>
+                <%= link_to 'Agregar', todos_new_path, :class => 'navbar-text'  %>"
+              </li>
+              <li>
+                <%= link_to 'Lista', todos_list_path, :class => 'navbar-text'  %>"
+              </li>
+          </ul>
       </div>
     </nav>
 
 
-    <%= yield %>
+      <%= yield %>
   </body>
 </html>
